# rusty-kaspa

./: .dockerignore  .gitignore  .rustfmt.toml  BITMAIN_ASIC_ANALYSIS.md  CI_FIXES_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README-DOCKER.md  README.md  _bridge_direct_share_handler.rs  build-docker-multi-arch.sh  check  check.ps1  clippy.toml  codecov.yaml  design-3-smt-store.md  devnet.sh  docker-compose.yml  docker-start.sh  env.example  logo.png-autosave.kra  logo.png~  miner.sh  security.md  sync-to-github.ps1  test
addressmanager/: Cargo.toml
addressmanager/src/: lib.rs
bip32/: Cargo.toml
bip32/src/: address_type.rs  error.rs  lib.rs  prefix.rs  private_key.rs  public_key.rs  result.rs  xkey.rs  xprivate_key.rs  xpublic_key.rs
bridge/: .gitattributes  .gitignore  Cargo.toml  Start-Kaspad.bat  Start-stratum-bridge-externalMode.bat  config.example.multi-instance.yaml  config.single.yaml  config.testnet.yaml  config.yaml
bridge/appimage/: AppRun  build.sh  stratum-bridge.desktop
bridge/docs/: README.md
bridge/src/: app_config.rs  app_dirs.rs  cli.rs  client_handler.rs  default_client.rs  hasher.rs  health_check.rs  inprocess_node.rs  jsonrpc_event.rs  kaspaapi.rs  lib.rs  log_colors.rs  main.rs  mining_state.rs  net_utils.rs  pow_diagnostic.rs  prom.rs  rkstratum_cpu_miner.rs  share_handler.rs  stratum_context.rs  stratum_listener.rs  stratum_server.rs  tests.rs  tracing_setup.rs
bridge/static/: index.html  raw.html
build-info/: Cargo.toml  build.rs
build-info/src/: git.rs
cli/: Cargo.toml
cli/src/: cli.rs  context.rs  error.rs  helpers.rs  imports.rs  lib.rs  main.rs  matchers.rs  notifier.css  notifier.rs  utils.rs
consensus/: .gitignore  Cargo.toml  dag_bps_2.json  test_parent_ordering_stability.json
consensus/benches/: bench.rs  check_scripts.rs  hash_benchmarks.rs  parallel_muhash.rs
consensus/client/: Cargo.toml
consensus/core/: Cargo.toml
consensus/notify/: Cargo.toml
consensus/pow/: Cargo.toml
consensus/seq-commit/: Cargo.toml
consensus/smt-store/: Cargo.toml
consensus/src/: config.rs  consensus.rs  errors.rs  lib.rs  params.rs  stubs.rs  sync_state.rs  test_consensus.rs  test_helpers.rs
consensus/tests/: integration_tests.rs  pipeline_tests.rs
consensus/wasm/: Cargo.toml
core/: Cargo.toml  build.rs
core/src/: assert.rs  console.rs  core.rs  instruction.rs  kaspad_env.rs  lib.rs  log.rs  monitor.rs  panic.rs  service.rs  signals.rs  test_consumer.rs  test_emitter.rs  test_service.rs  time.rs  utils.rs
daemon/: Cargo.toml
daemon/src/: error.rs  imports.rs  lib.rs
database/: Cargo.toml
database/rocknroll/: Cargo.toml
database/src/: access.rs  cache.rs  cache_policy_builder.rs  db.rs  errors.rs  item.rs  key.rs  lib.rs  redb.rs  registry.rs  rocksdb.rs  set_access.rs  utils.rs  writer.rs
event_processor/: Cargo.toml
event_processor/src/: errors.rs  lib.rs  processor.rs  service.rs
event_processor/tests/: processing_tests.rs  test.rs
fd_budget_pool/: Cargo.toml
fd_budget_pool/src/: lib.rs
kaspad/: Cargo.toml  README.md
kaspad/src/: args.rs  async_runtime.rs  daemon.rs  emulator.rs  lib.rs  main.rs  monitor.rs  tor_manager.rs  version.rs
kassiopeya/: Cargo.toml  README.md  build  build.ps1  index.js  nw.toml  package.json
kassiopeya/app/: index.html  index.js  page2.html
kassiopeya/src/: background.rs  error.rs  imports.rs  ipc.rs  lib.rs  terminal.rs
kdapp/: Cargo.toml
kdapp/benches/: bench.rs
kos/: .gitignore  Cargo.toml  README.md  build  build.ps1  index.js  linux-deps.sh  nw.toml  package  package.json  package.ps1  run
kos/app/: index.html  metrics.html
kos/src/: error.rs  imports.rs  ipc.rs  layout.rs  lib.rs  result.rs  settings.rs
math/: Cargo.toml
math/benches/: bench.rs  candidates.rs
math/examples/: lehmer_stats.rs
math/fuzz/: .gitignore  Cargo.toml  fuzz.sh
math/src/: int.rs  lehmer.rs  lib.rs  uint.rs  wasm.rs
mining/: Cargo.toml
mining/benches/: bench.rs
mining/errors/: Cargo.toml
mining/src/: cache.rs  consensus_context.rs  errors.rs  lib.rs  manager.rs  manager_tests.rs  monitor.rs  stubs.rs  toccata_transient_mass_activation_tests.rs
notify/: Cargo.toml
notify/benches/: bench.rs
notify/src/: address.rs  broadcaster.rs  collector.rs  connection.rs  converter.rs  error.rs  events.rs  lib.rs  listener.rs  notification.rs  notifier.rs  payload_prefix_filter.rs  root.rs  scope.rs  subscriber.rs
p2p/: Cargo.toml  build.rs
p2p/proto/: p2p.proto  rpc.proto
p2p/scripts/: wget_kaspad_protobufs.sh
p2p/src/: kaspa_flows.rs  kaspa_grpc.rs  kaspa_p2p.rs  lib.rs
perf_monitor/: Cargo.toml
perf_monitor/src/: builder.rs  counters.rs  lib.rs
python/: CHANGELOG.md  Cargo.toml  README.md  build-dev  build-release  kaspa.pyi  kaspa.toml  pyproject.toml
python/core/: Cargo.toml
python/examples/: addresses.py  derivation.py  log.py  message_signing.py  mnemonic.py  rpc.py  rpc_calls.py  rpc_subscriptions.py  test.py  wallet_utils.py
python/macros/: Cargo.toml
python/src/: lib.rs
python/tests/: addresses.py  rpc.py
rothschild/: Cargo.toml  README.md
rothschild/benches/: bench.rs
rothschild/src/: gas.rs  main.rs
simpa/: Cargo.toml  generate-json-tests-data.sh
simpa/src/: blocks_json.rs  lib.rs  main.rs
simpa/tests/: smt_repro.rs
stratum/: Cargo.toml  README.md
stratum-bridge/: Cargo.toml  INTEGRATION.md
stratum-bridge/src/: client_handler.rs  default_client.rs  errors.rs  hasher.rs  jsonrpc_event.rs  kaspaapi.rs  lib.rs  log_colors.rs  mining_state.rs  mock_connection.rs  pow_diagnostic.rs  prom.rs  share_handler.rs  stratum_context.rs  stratum_listener.rs  stratum_server.rs
stratum/src/: client.rs  error.rs  lib.rs  protocol.rs  server.rs
system-info/: Cargo.toml
system-info/src/: lib.rs
test_sync_state_notifications/: Cargo.toml
test_sync_state_notifications/src/: main.rs
utils/: Cargo.toml  build.rs
utils/alloc/: Cargo.toml
utils/benches/: bench.rs
utils/src/: any.rs  arc.rs  as_slice.rs  binary_heap.rs  channel.rs  counter.rs  expiring_cache.rs  fd_budget.rs  flattened_slice.rs  (+24 more)
(+2448 files in other folders)
